# intent-sentiment-assistant

./: README.md
extension/: package.json
extension/scripts/: generate-icons.js
extension/src/background/: index.js
extension/test/: utils.test.js
scripts/: setup.sh
sidecar/: README.md  package-lock.json  package.json  vitest.config.ts
sidecar/src/: main.tsx
sidecar/src-tauri/: Cargo.toml  tauri.conf.json
sidecar/src-tauri/src/: lib.rs  main.rs
sidecar/src/main/: index.ts
sidecar/src/main/analysis/: anonymizer.ts  cloud-llm.ts  local-llm.ts
sidecar/src/main/database/: encryption.ts  index.ts  schema.ts
sidecar/src/main/integrations/: gmail.ts  slack.ts  zoom.ts
sidecar/src/renderer/: App.css  App.tsx
sidecar/src/renderer/components/: Brief.css  Brief.tsx  SituationDetail.css  SituationDetail.tsx  SituationList.css  SituationList.tsx  StakeholderMap.css  StakeholderMap.tsx  Timeline.css  Timeline.tsx
sidecar/src/renderer/hooks/: useSituation.ts
sidecar/src/renderer/stores/: integrationStore.ts  situationStore.test.ts  situationStore.ts
sidecar/src/shared/: types.test.ts  types.ts
sidecar/src/test/: setup.ts
