[package]
name = "sidecar"
version = "0.1.0"
description = "AI Communication Assistant - Privacy-first workplace situation management"
authors = ["you"]
edition = "2021"

[lib]
name = "sidecar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Secure credential storage
keyring = "2"

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Mutex for state
parking_lot = "0.12"

# Directory paths
dirs = "5"

# Open URLs in browser
open = "5"

